FIX: Broken UI

--- a/src/components/Editor/Editor.module.scss
+++ b/src/components/Editor/Editor.module.scss
@@ -29,7 +29,7 @@
     padding-left: 1rem;
 
     > div {
-      overflow: scroll;
+      overflow: auto;
     }
     @include breakpoint-medium-down {
       padding-left: 0;
